Fix layout issue with 2-column layout and open notifications drawer.

--- a/app/stylesheets/layouts/_two_column.scss
+++ b/app/stylesheets/layouts/_two_column.scss
@@ -3,9 +3,3 @@
   margin-left: $button-bar-width + $sidebar-border-size;
   background: #f3f3f3;
 }
-
-.drawer-open {
-  .two-column-layout {
-    margin-left: $drawer-width + $button-bar-width + ($two-column-gutter/2);
-  }
-}
